[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["kiwi"]
readme = "README.md"
packages = [{include = "discord_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.2.3"
beautifulsoup4 = "^4.12.2"
requests = "^2.30.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
